# license

./: .gitignore  CMakeLists.txt  README.md  test.c
include/: base64.h  connection.h  licenseLib.h  macAddress.h
src/: base64.c  connection.c  macAddress.c
